@@ -1,35 +1,31 @@
 package advworld.objects;
 
+import java.util.HashMap;
+
 import advworld.level.Location;
+import advworld.util.Command;
 
 public class Book extends Objects{
 
-	private String myName;
-	private Location myLocation;
-	private String myDescription;
-	
 	private String contents;
 	
-	public Book(){
-		super();
-	}
-	
 	public Book(String name, Location loc, String desc){
-		super();
+		super(name, loc, desc);
 		contents = "empty";
+		pickUpAble = true;
+		type = "Book";
+		contents = "Empty";
 	}
 	
-	public Book(String name, Location loc, String desc, String cont){
-		super();
-		contents = cont;
+	public Book(String name, Location loc, String desc, String contents){
+		super(name,loc, desc);
+		this.contents = contents;
+		pickUpAble = true;
+		type = "Book";
 	}
 	
-	// still not sure how to control commands maybe use look command to prompt to new commands?
-	public String action(String command){
-		if(command.equals("read")){
-			return contents;
-		} else {
-			return "Incorrect command";
-		}
+	public String getContents(){
+		return contents;
 	}
+	
 }
