@@ -5,6 +5,7 @@ import java.util.*;
 import advworld.Game;
 import advworld.level.Location;
 import advworld.level.Path;
+import advworld.objects.*;
 import advworld.player.Party;
 import advworld.player.Player;
 
@@ -20,6 +21,9 @@ public abstract class Command {
 		table.put("help", new Command(){public void run(String arg[]){help(arg);}});
 		table.put("quit", new Command(){public void run(String arg[]){quit(arg);}});
 		table.put("look", new Command(){public void run(String arg[]){look(arg);}});
+		table.put("read", new Command(){public void run(String arg[]){read(arg);}});
+		table.put("take", new Command(){public void run(String arg[]){take(arg);}});
+		table.put("inventory", new Command(){public void run(String arg[]){inventory(arg);}});
 		return table;
 	}
 	
@@ -138,22 +142,111 @@ public abstract class Command {
 	}
 	
 	private static void look(String arg[]){
-		Utility.debug("look called");
+		Game.DEBUG = true;
+		Utility.debug("look called" + arg.length);
 		if(arg.length == 1){
 			System.out.println(Game.theParty.getlocation().description());
+			Game.theParty.getlocation().listItems();
+			System.out.println("");
 		} else {
-			// used to look at other objects or players
-			System.out.print("ECHO: ");
-			for(int i = 0; i < arg.length ; i++){
-				System.out.print(arg[i] + " ");
+			Utility.debug(arg[0]);
+			Utility.debug(arg[1]);
+			String[] tokens = arg[1].split(" ",2);
+			if(tokens[0].equals("at") && tokens.length == 1){
+				System.out.println("Look at what?");
+			} else if(tokens[0].equals("at") && tokens[1].length() > 0){
+				Iterator<Objects> iter = Game.theParty.getlocation().getMyObjects().iterator();
+				String name = tokens[1];
+				Utility.debug(name);
+				Game.DEBUG = false;
+				while(iter.hasNext()){
+					Objects obj = (Objects)iter.next();
+					if(obj.getName().equals(name)){
+						System.out.println("~Name: " + obj.getName());
+						System.out.println("~Type: " + obj.getType());
+						System.out.println("~Description: " + obj.getDescription());
+						return;
+					}
+				}
+				System.out.println("\"" + name +"\"" + " is not in this " + Game.theParty.getlocation().getType() + ".");
+				return;
+			} else {
+				System.out.println("Incorrect Command");
 			}
-			System.out.println();
 		}
 	}
 	
+	private static void read(String arg[]){
+		if(arg.length == 1){
+			System.out.println("Read what?");
+		} else if(arg.length > 1){
+			Iterator<Objects> iter = Game.theParty.getleader().getInventory().iterator();
+			String title = arg[1];
+			while(iter.hasNext()){
+				Objects obj = (Objects)iter.next();
+				if(obj.getName().equals(title)){
+					if(obj.isType("Book")){
+						Book book = (Book) obj;
+						System.out.println("\"" + title +"\"" + " reads...");
+						System.out.println("     " + book.getContents());
+						System.out.println("End of " + book.getName());
+						return;
+					} else {
+						System.out.println("\"" + title +"\"" + " is not a book.");
+						return;
+					}
+				}
+			}
+			System.out.println("You do not have " + "\"" + title +"\"" + ".");
+			return;
+		} else {
+			System.out.println("Incorrect command.");
+		}
+	}
+	
+	private static void take(String arg[]){
+		if(arg.length == 1){
+			System.out.println("Read what?");
+		} else if(arg.length > 1){
+			Iterator<Objects> iter = Game.theParty.getlocation().getMyObjects().iterator();
+			String objName = arg[1];
+			while(iter.hasNext()){
+				Objects obj = (Objects)iter.next();
+				if(obj.getName().equals(objName)){
+					if(obj.isPickUpAble()){
+						Game.theParty.getleader().addItem(obj);
+						Game.theParty.getlocation().removeObject(obj);
+						return;
+					} else {
+						System.out.println("You can not pick up " + "\"" + objName +"\"" + ".");
+						return;
+					}
+				}
+			}
+			System.out.println("\"" + objName +"\"" + " is not in this " + Game.theParty.getlocation() + ".");
+			return;
+		} else {
+			System.out.println("Incorrect command.");
+		}
+	}
+	
+	private static void inventory(String arg[]){
+		if(arg.length == 1){
+			Iterator<Objects> iter = Game.theParty.getleader().getInventory().iterator();
+			System.out.print("Inventory:");
+			while(iter.hasNext()){
+				System.out.print(iter.next().getType() + ": " + iter.next().getName());
+				System.out.print((iter.hasNext()?", ":"\n"));
+			}
+			return;
+		} else {
+			System.out.println("Incorrect command.");
+		}
+	}
 	
 	private static void println(Object msg) {
 		Utility.println(msg);
 	}
+	
 	
 }
